--- a/src/components/Grid photo/G.css
+++ b/src/components/Grid photo/G.css
@@ -1,11 +1,7 @@
 .home_section_six_box {
-    padding-left: 10rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     width: 100%;
-    grid-template-rows: auto;
-    grid-template-areas: ". .";
-    gap: 25px 60px;
+
 }
 img {
     vertical-align: middle;
@@ -14,15 +10,16 @@ img {
 .m2 {
     padding-left: 10rem;
     padding-right: 10rem;
+    margin: auto;
     background: #080424;
 }
 .home_section_six_single_box {
+    float: left;
     width: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
     padding: 21px 16px;
-    position: relative;
 }
 .tags_name {
     display: flex;
@@ -85,6 +82,10 @@ img {
 }
 .home_section_six_single_box_figure img {
     vertical-align: middle;
-    width: 120%;
+    width: 90%;
     height: auto;
 }
+.kk {
+    float: left;
+}
+
